# pocketsphinx-fuzzing

./: ATTACK_SURFACE.md  CMakeLists.txt  FUZZING_SUMMARY.md  QUICK_START.md  build-afl.sh  triage-helper-jsgf.sh
fuzzing/: CMakeLists.txt  README.md  fuzz_audio.c  fuzz_dict.c  fuzz_fsg.c  fuzz_jsgf.c  fuzz_ngram.c  run_all_fuzzers.sh  run_fuzzer.sh  test_crash.c  test_jsgf_crash.c  triage_crashes.sh
fuzzing/seeds/fsg/: basic.fsg
fuzzing/seeds/jsgf/: basic.jsgf  complex.jsgf
fuzzing/seeds/ngram/: basic.arpa
